# ecosystem-catalog-search-mcp

./: .dockerignore  .gitignore  Containerfile  README.md  __init__.py  pyproject.toml
.tekton/: ecosystem-catalog-search-mcp-pull-request.yaml  ecosystem-catalog-search-mcp-push.yaml
openshift/: template.yaml
src/: __init__.py  config.py  database.py  mcp_server.py  metrics.py  tools.py
