[project]
name = "redhat-search-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides access to Red Hat's ecosystem catalog using the REST search API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.28.1",
    "mcp==1.10.1",
    "prometheus_client==0.22.1",
    "certifi==2024.8.30",
]

[project.scripts]
redhat-search-mcp = "src.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [] 